crates/wdl-ast/tests/validation/duplicate-param-meta/source.errors
error: task `t` contains a duplicate parameter metadata section
   ┌─ tests/validation/duplicate-param-meta/source.wdl:10:5
   │
 6 │     parameter_meta {
   │     -------------- first parameter metadata section is defined here
   ·
10 │     parameter_meta {
   │     ^^^^^^^^^^^^^^ this parameter metadata section is a duplicate

error: workflow `w` contains a duplicate parameter metadata section
   ┌─ tests/validation/duplicate-param-meta/source.wdl:22:5
   │
18 │     parameter_meta {
   │     -------------- first parameter metadata section is defined here
   ·
22 │     parameter_meta {
   │     ^^^^^^^^^^^^^^ this parameter metadata section is a duplicate

