crates/wdl-ast/tests/validation/duplicate-param-meta/source.wdl
# This is a test of too many param meta sections in a task and workflow.

version 1.1

task t {
    parameter_meta {

    }

    parameter_meta {

    }

    command <<<>>>
}

workflow w {
    parameter_meta {

    }

    parameter_meta {

    }
}
